@@ -25,34 +25,30 @@ $search_limiter = (($icmsConfigSearch['enable_deep_search'] == true) ? $icmsConf
 $xoopsOption['template_main'] = 'system_search.html';
 include ICMS_ROOT_PATH.'/header.php';
 
-$action = 'search';
-if(!empty($_GET['action'])) {$action = trim(StopXSS($_GET['action']));}
-elseif(!empty($_POST['action'])) {$action = trim(StopXSS($_POST['action']));}
-$query = '';
-if(!empty($_GET['query'])) {$query = StopXSS($_GET['query']);}
-elseif(!empty($_POST['query'])) {$query = StopXSS($_POST['query']);}
-$andor = 'AND';
-if(!empty($_GET['andor'])) {$andor = StopXSS($_GET['andor']);}
-elseif(!empty($_POST['andor'])) {$andor = StopXSS($_POST['andor']);}
-$mid = $uid = $start = 0;
-if(!empty($_GET['mid'])) {$mid = intval($_GET['mid']);}
-elseif(!empty($_POST['mid'])) {$mid = intval($_POST['mid']);}
-if(!empty($_GET['uid'])) {$uid = intval($_GET['uid']);}
-elseif(!empty($_POST['uid'])) {$uid = intval($_POST['uid']);}
-if(!empty($_GET['start'])) {$start = intval($_GET['start']);}
-elseif(!empty($_POST['start'])) {$start = intval($_POST['start']);}
+$action = (isset($_GET['action'])) ? trim(filter_input(INPUT_GET, $_GET['action'], FILTER_SANITIZE_STRING))
+	: ((isset($_POST['action'])) ? trim(filter_input(INPUT_POST, $_POST['action'], FILTER_SANITIZE_STRING)) : 'search');
+$query = (isset($_GET['query'])) ? trim(filter_input(INPUT_GET, $_GET['query'], FILTER_SANITIZE_STRING))
+	: ((isset($_POST['query'])) ? trim(filter_input(INPUT_POST, $_POST['query'], FILTER_SANITIZE_STRING)) : '');
+$andor = (isset($_GET['andor'])) ? trim(filter_input(INPUT_GET, $_GET['andor'], FILTER_SANITIZE_STRING))
+	: ((isset($_POST['andor'])) ? trim(filter_input(INPUT_POST, $_POST['andor'], FILTER_SANITIZE_STRING)) : 'AND');
+$mid = (isset($_GET['mid'])) ? trim(filter_input(INPUT_GET, $_GET['mid'], FILTER_VALIDATE_INT))
+	: ((isset($_POST['mid'])) ? trim(filter_input(INPUT_POST, $_POST['mid'], FILTER_VALIDATE_INT)) : 0);
+$uid = (isset($_GET['uid'])) ? trim(filter_input(INPUT_GET, $_GET['uid'], FILTER_VALIDATE_INT))
+	: ((isset($_POST['uid'])) ? trim(filter_input(INPUT_POST, $_POST['uid'], FILTER_VALIDATE_INT)) : 0);
+$start = (isset($_GET['start'])) ? trim(filter_input(INPUT_GET, $_GET['start'], FILTER_VALIDATE_INT))
+	: ((isset($_POST['start'])) ? trim(filter_input(INPUT_POST, $_POST['start'], FILTER_VALIDATE_INT)) : 0);
 
 $xoopsTpl->assign("start", $start + 1);
 
 $queries = array();
 
 if ($action == "results") {
-	if ($query == "") {
+	if (!$query || $query == "") {
 		redirect_header("search.php",1,_SR_PLZENTER);
 		exit();
 	}
 } elseif ($action == "showall") {
-	if ($query == "" || empty($mid)) {
+	if (!query || $query == "" || empty($mid)) {
 		redirect_header("search.php",1,_SR_PLZENTER);
 		exit();
 	}
